fix overflow sidebar

--- a/src/app/alino-app/components/navbar/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbar.module.css
@@ -15,7 +15,7 @@
   height: 100%;
   background-color: rgb(255, 255, 255);
   border-radius: 20px;
-  padding: 25px;
+  padding: 25px 0px 25px 0px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -25,8 +25,8 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-  overflow-x: hidden;
   overflow-y: scroll;
+  padding: 0px 25px 0px 25px;
 }
 
 .SubjectsCardsSection::-webkit-scrollbar {
